k8s/app/deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: kubesentry

spec:
  replicas: 2

  selector:
    matchLabels:
      app: kubesentry

  template:

    metadata:
      labels:
        app: kubesentry
    spec:
      containers:
        - name: kubesentry
          image: yashpandeywork/kubesentry:v3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
