k8s/app/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: kubesentry-service

spec:

  selector:
    app: kubesentry

  ports:

    - protocol: TCP
      port: 80
      targetPort: 8080

  type: NodePort
